# Legacy

./: README.md  codebase.txt  script.sh
backend/: .env.example  .gitignore  Cargo.toml  README.md
backend/migrations/: 0001_initial.sql  0002_invited_status.sql  0003_settings_audit.sql  0004_event_polls.sql  0005_poll_multi_choice.sql  0006_poll_allow_multiple.sql  0007_share_token.sql  0008_avatar.sql  0009_poll_types_templates.sql
backend/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  setup.rs
backend/src/routes/: account.rs  admin.rs  auth.rs  events.rs  invites.rs  mod.rs  polls.rs  public_events.rs  rsvp.rs
backend/src/routes/admin/: audit.rs  discord.rs  events.rs  mod.rs  stats.rs  users.rs
frontend/: .env  .env.example  .gitignore  auth.ts  drizzle.config.ts  middleware.ts  package.json  tailwind.config.ts
frontend-svelte/: package.json  tailwind.config.ts
frontend-svelte/src/lib/: api.ts  utils.ts
frontend-svelte/src/routes/: +layout.svelte
frontend/app/: layout.tsx
frontend/app/account/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/calendar/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: ThemeProvider.tsx
frontend/components/calendar/: CalendarGrid.tsx  CalendarHeader.tsx  DeleteConfirmDialog.tsx  EventDetailDialog.tsx  EventFormDialog.tsx  index.tsx  types.ts  utils.ts
frontend/db/: index.ts  schema.ts  seed.ts
frontend/lib/: discord.ts
frontend/scripts/: init-db.ts  run-migration.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  types.ts  (+1 more)
frontend/types/: next-auth.d.ts
(+47 files in other folders)
